landing page project finished

--- a/index.html
+++ b/index.html
@@ -7,52 +7,60 @@
 </head>
 <body>
     <div class="section header">
-        <p class="logo">header logo</p>
+        <p class="logo">Header Logo</p>
         <div class="navs">
-            <a class="nav">link-one</a>
-            <a class="nav">link-two</a>
-            <a class="nav">link-three</a>
+            <a class="nav">header link one</a>
+            <a class="nav">header link two</a>
+            <a class="nav">header link three</a>
         </div>
         
     </div>
-    <div class="section content">
-        <h1>This Website is Awesome</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores sint minima esse error, voluptatum hic ab autem! Impedit facere, quas pariatur facilis et nemo in vitae veritatis. Sequi repellat minima, odit blanditiis quasi iusto enim nam consequuntur neque quas placeat perspiciatis laboriosam esse voluptates id illum magnam excepturi! Molestias!</p>
-        <button></button>
-        <div>Placeholder for image</div>
+    <div class="section content1">
+        <div class="start">
+            <p class="main-heading">This Website is Awesome</h1>
+            <p class="main-subheading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores sint minima esse error, voluptatum hic ab autem! Impedit facere, quas pariatur facilis </p>
+            <button class="sign-btn">Sign up</button>
+        </div>
+        <img class="image-start" src="./images/alexa-rio.jpg" alt="pic of cute japanese spitz" />
     </div>
-    <div class="section content">
-        <h2>Some random information</h2>
-        <div class="card">
-            <div>image placeholder</div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ipsum aliquid amet provident optio facilis consectetur repudiandae hic quasi ullam?</p>
-        </div>
-        <div class="card">
-            <div>image placeholder</div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ipsum aliquid amet provident optio facilis consectetur repudiandae hic quasi ullam?</p>
-        </div>
-        <div class="card">
-            <div>image placeholder</div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ipsum aliquid amet provident optio facilis consectetur repudiandae hic quasi ullam?</p>
-        </div>
-        <div class="card">
-            <div>image placeholder</div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ipsum aliquid amet provident optio facilis consectetur repudiandae hic quasi ullam?</p>
+    <div class="section content2">
+        <h2 class="second-heading">Some random information</h2>
+        <div class="cards">
+            <div class="card">
+                <img class="square-image" src="./images/jspitz.jpg">
+                <p class="image-caption">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="card">
+                <img class="square-image" src="./images/jspitz.jpg">
+                <p class="image-caption">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="card">
+                <img class="square-image" src="./images/jspitz.jpg">
+                <p class="image-caption">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="card">
+                <img class="square-image" src="./images/jspitz.jpg">
+                <p class="image-caption">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
         </div>
     </div>
-    <div class="section content">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit accusantium error facere corporis cumque, facilis voluptatem laborum rerum, laudantium tempora nihil maiores amet nemo eum odio porro? Eveniet, ipsam voluptates.</p>
-        <p>-by some person</p>
+    <div class="section content3">
+        <div class="quote-section">
+            <p class="quote">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit accusantium error facere corporis cumque, facilis voluptatem laborum rerum.</p>
+            <p class="quote-author">-by some person</p>
+        </div>
     </div>
-    <div class="section content">
-        <div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-            <button></button>
+    <div class="section content4">
+        <div class="action-widget">
+            <div class="widget-texts">
+                <p class="widget-heading">Call to action! It's time!</p>
+                <p class="widget-subheading">Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
+            </div>
+            <button class="widget-sign-btn">Sign up</button>
         </div>
     </div>
     <div class="section footer">
-        <p>copyright</p>
+        <p class="copyright">copyright &#169; the odin project 2023</p>
     </div>
 </body>
 </html>
